Fix cover size on mobile

--- a/themes/aindustriosa/src/scss/_global.scss
+++ b/themes/aindustriosa/src/scss/_global.scss
@@ -9,7 +9,6 @@ body {
 }
 
 img {
-  max-width: 100%;
   height: auto;
   display: inline-block;
 }
