--- a/themes/aindustriosa/src/scss/content/_hero.scss
+++ b/themes/aindustriosa/src/scss/content/_hero.scss
@@ -10,6 +10,9 @@
     top: 0;
     left: 0;
     z-index: -100;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -19,8 +22,11 @@
       min-width: 100%;
       width: auto;
       height: auto;
-      object-fit: cover;
-    }
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      }
   }
   
   .content-wrapper {
